# labs-evm

1_st_mt/cpp/: CMakeLists.txt  README.md
1_st_mt/cpp/app/: CMakeLists.txt  main.cpp  quick_test.cpp
1_st_mt/cpp/common/: CMakeLists.txt  common.cpp  common.hpp
1_st_mt/cpp/integral_opencl/: CMakeLists.txt  opencl_impl.cpp  opencl_impl.hpp
1_st_mt/cpp/integral_parallel/: CMakeLists.txt  parallel.cpp  parallel.hpp
1_st_mt/cpp/integral_parallel_omp/: CMakeLists.txt  omp_parallel.cpp  omp_parallel.hpp
1_st_mt/cpp/integral_single/: CMakeLists.txt  single.cpp  single.hpp
1_st_mt/rust/: Cargo.toml
1_st_mt/rust/common/src/: lib.rs
1_st_mt/rust/integral_opencl/: Cargo.toml
1_st_mt/rust/integral_opencl/src/: lib.rs  main.rs
1_st_mt/rust/integral_parallel/: Cargo.toml
1_st_mt/rust/integral_parallel/src/: lib.rs  main.rs
1_st_mt/rust/integral_single/: Cargo.toml
1_st_mt/rust/integral_single/src/: lib.rs  main.rs
1_st_mt/rust/src/: main.rs
2_mpi/: .gitignore  CMakeLists.txt  README.md  mpi_parallel.cpp  mpi_parallel.hpp  mpi_test.cpp
